009/deploy-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-2
  name: app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
      - image: artifactory.dev.cmbc.cn:31344/fhcloud-docker-sit-local/backend:0.0.6
        name: backend-2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-2
  name: app-svc-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-2
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-3
  name: app-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-3
  template:
    metadata:
      labels:
        app: app-3
    spec:
      containers:
      - image: artifactory.dev.cmbc.cn:31344/fhcloud-docker-sit-local/backend:0.0.6
        name: backend-3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-3
  name: app-svc-3
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-3
  sessionAffinity: None
  type: ClusterIP
